[package]
name = "natc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.24.0"
clap = { version = "4.3.4", features = ["derive"] }
tokio = {version = "1", features = ["rt-multi-thread","macros"]}
